Changed all to config to hibernate config.